[package]
name = 'openid-example'
version = '0.1.0'
authors = ['Alexander Korolev <kilork@yandex.ru>']
edition = '2018'

[features]
default = []
microsoft = ['openid/microsoft']

[dependencies]
actix-identity = '0.3'
actix-web = { version = '3.3', features = ['rustls'] }
dotenv = '0.15'
exitfailure = '0.5'
reqwest = { version = '0.10', features = ['json'] }
serde = { version = '1.0', features = ['derive'] }
uuid = { version = '0.8', features = ['v4'] }
url = '2.1'

[dependencies.openid]
version = '0.9'
default-features = false
